tests/valid/structural_issues.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "StructuralIssuesTest",
    "description": "A schema-valid, structurally-valid two-state model kept deliberately small: it exercises the structural layer (equation/unknown balance, reference integrity, dimensional consistency) rather than any single feature. Both state variables x and y carry a defining ODE, so the equation-unknown balance holds; a file that violates that balance belongs in tests/invalid (see equation_count_mismatch.esm).",
    "authors": ["Test Author"],
    "created": "2026-02-19T00:00:00Z"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": {
          "type": "state",
          "units": "mol/mol",
          "default": 1e-6,
          "description": "Test state variable x"
        },
        "y": {
          "type": "state",
          "units": "mol/mol",
          "default": 2e-6,
          "description": "Test state variable y"
        },
        "k": {
          "type": "parameter",
          "units": "1/s",
          "default": 0.001,
          "description": "Rate constant"
        }
      },
      "equations": [
        {
          "lhs": {"op": "D", "args": ["x"], "wrt": "t"},
          "rhs": {"op": "*", "args": [{"op": "-", "args": ["k"]}, "x"]}
        },
        {
          "lhs": {"op": "D", "args": ["y"], "wrt": "t"},
          "rhs": {"op": "*", "args": ["k", "x"]}
        }
      ]
    }
  }
}